# tendencys-desktop-app

./: .env.example  .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.cursor/rules/: local-sso-dev.mdc  releasing.mdc
.github/workflows/: release-desktop.yml
docs/: index.html  sso-user-provisioning-audit.md
public/locales/en/: common.json
public/locales/es/: common.json
scripts/: bump-version.mjs
src/: App.tsx  i18n.ts  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json  service-webviews.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: desktop-files.toml  device-key.toml  native-webviews.toml  validate-accounts-token.toml
src-tauri/src/: desktop_files.rs  device_key.rs  lib.rs  main.rs  webview_manager.rs
src/components/: DockTipBanner.tsx  ErrorBoundary.tsx  ServiceIcon.tsx  UpdateBanner.tsx
src/components/auth/: ServiceShowcase.tsx  WelcomeScreen.tsx
src/components/developers/: DevelopersHub.tsx
src/components/home/: HomeHub.tsx  OpsDetailRail.tsx
src/components/home/world/: HudChip.tsx  HudStats.tsx  OpsControls.tsx  OpsWorld.tsx  draw.ts
src/components/layout/: AppShell.tsx  ServiceMenu.tsx
src/components/settings/: DesktopSettings.tsx
src/components/ui/: button.tsx  dropdown-menu.tsx  input.tsx
src/config/: developers.ts  layout.ts  ops-scene.ts  ops-world.test.ts  ops-world.ts  services.ts
src/hooks/: useAppUpdater.ts  useProductSso.ts  useTauriDeepLink.ts
src/lib/: accounts-api.ts  atid-jar.ts  auth-handoff.ts  desktop-print.ts  device-keys.ts  dock-tip.ts  locale.test.ts  locale.ts  login-gate.ts  native-webviews.ts  pending-open-target.test.ts  pending-open-target.ts  preferences.ts  sentry.ts  shell-history.test.ts  shell-history.ts  sso-log.ts  tauri.ts  tendencys-auth.ts  token-store.ts  updater.ts
src/lib/ops-sim/: scripted-source.ts  types.ts
src/locales/en/: common.json
src/locales/es/: common.json
src/locales/fr/: common.json
src/locales/hi/: common.json
src/locales/it/: common.json
src/locales/pt/: common.json
src/locales/zh/: common.json
src/pages/: Authentication.tsx  Home.tsx  LoginPage.tsx
src/stores/: auth-store.ts  ops-world-store.ts  preferences-store.ts  service-store.ts
